--- a/about/index.html
+++ b/about/index.html
@@ -7,11 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
-    <!-- Title & Description -->
-    <title>About Archedge | Architects & Interiors Park in Hyderabad</title>
-    <meta name="description" content="Learn about Archedge – Hyderabad's destination for architecture, interior design, decorative wall panels, PVC ceilings, waterproof flooring, and WPC panels. Our story, mission, and commitment to quality spaces.">
-    <meta name="keywords" content="Archedge, architects Hyderabad, interior design Hyderabad, decorative wall panels, PVC ceiling systems, waterproof flooring, WPC panels, building design Hyderabad, ceiling systems">
-    <link rel="canonical" href="https://archedge.pro/about">
+    <title>About Archedge | Architecture & Interior Experts in Hyderabad</title>
+<meta name="description" content="Learn about Archedge – Hyderabad’s specialists in architecture, interior design, decorative wall panels, PVC ceilings, WPC panels, and waterproof flooring. Explore our story, mission, and dedication to creating luxurious, functional spaces.">
+<meta name="keywords" content="Archedge, architects Hyderabad, interior design Hyderabad, decorative wall panels Hyderabad, PVC ceiling Hyderabad, WPC panels Hyderabad, waterproof flooring Hyderabad, building design, ceiling systems, luxury interiors, modern architecture">
+<link rel="canonical" href="https://archedge.pro/about">
 
     <meta name="robots" content="index, follow" />
 
