--- a/careers/index.html
+++ b/careers/index.html
@@ -7,10 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Title & Description -->
-    <title>Careers at Archedge | Job Openings & Partnerships in Hyderabad</title>
-    <meta name="description" content="Explore careers at Archedge – Hyderabad’s leading interior and exterior design brand. Join our team or collaborate with us to distribute premium decorative wall panels, ceilings, and flooring across AP & Telangana.">
-    <meta name="keywords" content="Archedge careers, interior design jobs Hyderabad, wall panels jobs, ceiling design careers, flooring careers, Archedge recruitment, distribution partnership, decorative interiors Hyderabad, careers AP TS">
+   <title>Careers at Archedge | Job Openings & Partnerships in Hyderabad</title>
+<meta name="description" content="Explore careers at Archedge – Hyderabad’s top interior and exterior design brand. Join our team or collaborate with us to distribute premium decorative wall panels, ceilings, and flooring across AP & Telangana.">
+<meta name="keywords" content="Archedge careers, interior design jobs Hyderabad, wall panels jobs, ceiling design careers, flooring careers, Archedge recruitment, distribution partnership, decorative interiors Hyderabad, careers AP TS">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://archedge.pro/careers">
