--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-    <!-- Title & Description -->
-    <title>Archedge – Decorative Wall Panels, Ceiling & Flooring in Hyderabad</title>
-    <meta name="description" content="Premium decorative wall panels, ceiling systems & waterproof flooring in Hyderabad. Free consultation & installation. Call +91 91211 88172." />
-    <meta name="keywords" content="decorative wall panels Hyderabad, waterproof wall panels, ceiling panels Hyderabad, PVC wall panels, WPC panels, termite resistant panels, interior wall panels, commercial wall panels, home interior panels, Archedge Hyderabad, best wall panels Hyderabad, modern interior panels" />
-   
+    <title>Archedge – Premium Decorative Wall Panels, Ceilings & Flooring in Hyderabad</title>
+<meta name="description" content="Discover Archedge – Hyderabad’s leading provider of PVC Louvers, WPC & PVC ceilings, decorative wall panels, and waterproof flooring. Explore our premium interior and exterior solutions for modern homes and commercial spaces.">
+<meta name="keywords" content="PVC Louvers, PVC Ceiling, WPC Ceiling Panels, Interior Panels, Exterior Panels, False Ceiling, Decorative Products, Interior Decor, Ceiling Designs, Outdoor Panels, Indoor Panels, Charcoal Louvers, Charcoal Panels, Luxurious Ceiling, Luxury Decor, Innovative Panels, Polyvinyl Panels, Polyurethane Products, Domestic Ceiling Panels, Modern Wall Panels, Waterproof Panels">
+
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://archedge.pro/" />
