--- a/products/future decore/index.html
+++ b/products/future decore/index.html
@@ -7,10 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Page Title & Description -->
-    <title>Future Decore PU Stones & Leafs - Premium Decorative Wall Panels | Archedge Hyderabad</title>
-    <meta name="description" content="Shop premium Future Decore PU Stones & Leafs decorative wall panels in Hyderabad. Waterproof, lightweight, and elegant PU stone cladding for modern interiors. Authorized distributor of Future Decore products.">
-    <meta name="keywords" content="Future Decore, PU Stones, PU Leafs, decorative wall panels, stone cladding, interior wall panels, waterproof wall panels, Hyderabad">
+   <title>Future Decore PU Stones & Leafs - Premium Decorative Wall Panels | Archedge Hyderabad</title>
+<meta name="description" content="Shop premium Future Decore PU Stones & Leafs decorative wall panels in Hyderabad. Waterproof, lightweight, and elegant PU stone cladding for modern interiors. Authorized distributor of Future Decore products.">
+<meta name="keywords" content="Future Decore, PU Stones, PU Leafs, decorative wall panels, stone cladding, interior wall panels, waterproof wall panels, Hyderabad, modern interior panels, designer wall cladding">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://archedge.pro/products/future%20decore/">
