--- a/products/stanza/index.html
+++ b/products/stanza/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Stanza - Soffit | Stanza Decor Products - Designer Wall Panels & Fluted Designs | Archedge Hyderabad</title>
-  <meta name="description" content="Buy Stanza Decor soffit panels & louvers in Hyderabad. Premium waterproof decorative wall panels for modern interiors. Soffit louvers, panels, and ceiling solutions. Best prices, authorized dealer.">
-  <meta name="keywords" content="Stanza Decor, soffit panels, soffit louvers, decorative wall panels, ceiling panels, waterproof panels, Hyderabad, interior design, architectural panels">
-  <meta name="author" content="Archedge – Architects & Interiors Park">
+  <title>Stanza - Soffit | Designer Wall Panels & Fluted Ceiling Solutions | Archedge Hyderabad</title>
+<meta name="description" content="Buy Stanza Decor soffit panels & louvers in Hyderabad. Premium waterproof decorative wall panels for modern interiors. Soffit louvers, panels, and ceiling solutions. Authorized dealer with best prices.">
+<meta name="keywords" content="Stanza Decor, soffit panels, soffit louvers, decorative wall panels, ceiling panels, waterproof panels, Hyderabad, interior design, architectural panels, modern ceiling solutions">
+<meta name="author" content="Archedge – Architects & Interiors Park">
   <meta name="robots" content="index, follow">
 
   <!-- Canonical URL -->
