--- a/products/stardec/index.html
+++ b/products/stardec/index.html
@@ -2,11 +2,11 @@
 <html lang="en"><head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>StarDEC Charcoal Louvers & Wooden Panels | Premium Interior Solutions | Archedge Hyderabad</title>
-  <meta name="description" content="Premium StarDEC charcoal louvers and wooden panels in Hyderabad. Modern interior solutions with waterproof, fire-retardant panels. Expert installation available.">
-  <meta name="keywords" content="StarDEC, charcoal louvers, wooden panels, decorative wall panels, ceiling panels, waterproof panels, interior design Hyderabad, premium wall panels">
-  <meta name="author" content="Archedge – Architects & Interiors Park">
+<!-- StarDEC Page Title & Description -->
+<title>StarDEC Charcoal Louvers & Wooden Panels | Premium Interior Solutions | Archedge Hyderabad</title>
+<meta name="description" content="Discover StarDEC charcoal louvers and wooden panels in Hyderabad. Premium, durable, and modern interior solutions with expert installation services.">
+<meta name="keywords" content="StarDEC, charcoal louvers, wooden panels, fire-retardant louvers, decorative wooden panels, modern interior solutions, premium interior panels, Archedge StarDEC, specialty wall panels, designer louvers">
+<meta name="author" content="Archedge – Architects & Interiors Park">
   <meta name="robots" content="index, follow">
   
   <!-- Canonical -->
