--- a/products/vox/index.html
+++ b/products/vox/index.html
@@ -4,12 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Page Title -->
-  <title>Vox Decorative Panels & Interior Solutions in Hyderabad | Archedge</title>
-
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Premium Vox decorative panels and interior solutions by Archedge. Modern wall panels, ceilings, and flooring for homes and offices in Hyderabad. Expert installation available.">
-  <meta name="keywords" content="Vox panels Hyderabad, Vox decorative panels, interior design materials, wall panels, ceiling panels, flooring, home decor">
+<!-- Vox Page Title & Description -->
+<title>Vox Decorative Panels & Interior Solutions in Hyderabad | Archedge</title>
+<meta name="description" content="Explore Vox decorative panels and interior solutions by Archedge in Hyderabad. High-quality, modern wall panels, ceilings, and flooring for homes and offices with expert installation.">
+<meta name="keywords" content="Vox panels, Vox decorative panels, modern wall panels, designer interior solutions, premium ceilings, flooring solutions, residential interior panels, office wall panels, Archedge Vox, specialty interior products">
   <meta name="author" content="Archedge – Architects & Interiors Park">
   <meta name="robots" content="index, follow">
 
