--- a/about/index.html
+++ b/about/index.html
@@ -45,8 +45,6 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../assets/css/navbar.css">
     <link rel="stylesheet" href="../assets/css/about.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 
     <!-- Preconnect / DNS Prefetch for Performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -329,11 +327,12 @@
 
     <!-- Hero Section -->
     <section class="hero-section">
-        <div class="hero-content">
-            <h1>We Transform Your Spaces Into Masterpieces</h1>
+    <img  src="../assets/images/about/cover.png"  alt="About archedge  Hero Banner"  class="hero-img"   fetchpriority="high">
+    <div class="hero-content">
+        <h1>We Transform Your Spaces Into Masterpieces</h1>
+    </div>
+</section>
 
-        </div>
-    </section>
 
     <!-- Our Story Section -->
     <section class="section">
