--- a/careers/index.html
+++ b/careers/index.html
@@ -64,8 +64,6 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="../assets/css/navbar.css">
     <link rel="stylesheet" href="../assets/css/careers.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Enhanced SEO Meta Tags -->
     <meta name="author" content="Archedge – Architects & Interiors Park">
@@ -331,9 +329,10 @@
 
     <!-- Hero Section -->
     <section class="hero-section">
+    <img  src="../assets/images/careers.avif"  alt="Archedge careers Hero Banner"  class="hero-img"   fetchpriority="high">
         <div class="hero-content">
             <h1>Join & Grow with Archedge</h1>
-            <p>Apply for careers or collaborate with us to distribute innovative products.</p>
+            <p style="font-size:large;">Apply for careers or collaborate with us to distribute innovative products.</p>
         </div>
     </section>
 
