--- a/contact/index.html
+++ b/contact/index.html
@@ -330,6 +330,7 @@
 
     <!-- Hero Section -->
     <section class="hero-section">
+    <img  src="../assets/images/contact/cover.avif"  alt="Contact archedge Hero Banner"  class="hero-img"   fetchpriority="high">
         <div class="hero-content">
             <h1>Get In Touch With Us</h1>
             <p>Ready to transform your space? Let's discuss your project and find the perfect solutions for your needs.</p>
