--- a/about/index.html
+++ b/about/index.html
@@ -114,7 +114,7 @@
         "logo": "https://archedge.pro/assets/images/logo.png",
         "image": "https://archedge.pro/assets/images/og.png",
         "telephone": "+91-91211-88172",
-        "email": "archedge.pro@gmail.com",
+        "email": "archedgepro@gmail.com",
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "H. No: 11-13-302, Ground Floor, Road No - 9, Alkapuri Colony",
@@ -327,11 +327,12 @@
 
     <!-- Hero Section -->
     <section class="hero-section">
-    <img  src="../assets/images/about/cover.png"  alt="About archedge  Hero Banner"  class="hero-img"   fetchpriority="high">
-    <div class="hero-content">
-        <h1>We Transform Your Spaces Into Masterpieces</h1>
-    </div>
-</section>
+        <img src="../assets/images/about/cover.png" alt="About archedge  Hero Banner" class="hero-img"
+            fetchpriority="high">
+        <div class="hero-content">
+            <h1>We Transform Your Spaces Into Masterpieces</h1>
+        </div>
+    </section>
 
 
     <!-- Our Story Section -->
@@ -494,8 +495,10 @@
 
             <div class="footer-column">
                 <h4>Contact Info</h4>
-                <p>Have a project in mind? Let's talk: <a href="mailto:archedge@gmail.com">archedge@gmail.com</a></p>
-                <p><strong>Phone:</strong> <a href="tel:+919121188172">+91 91211 88172</a></p>
+                <p>Have a project in mind? Let's talk: <a href="mailto:archedgepro@gmail.com">archedgepro@gmail.com</a>
+                </p>
+                <p><strong>Phone:</strong><br> <a href="tel:+919121188172">+91 91211 88172</a></p>
+                <p><a href="tel:+919063021489">+91 90630 21489</a></p>
             </div>
 
             <div class="footer-column">
