--- a/contact/index.html
+++ b/contact/index.html
@@ -85,7 +85,7 @@
     <meta property="business:contact_data:region" content="Telangana">
     <meta property="business:contact_data:postal_code" content="500035">
     <meta property="business:contact_data:country_name" content="India">
-    <meta property="business:contact_data:email" content="archedge.pro@gmail.com">
+    <meta property="business:contact_data:email" content="archedgepro@gmail.com">
     <meta property="business:contact_data:phone_number" content="+919121188172">
 
     <!-- Google Analytics 4 -->
@@ -117,7 +117,7 @@
       "logo": "https://archedge.pro/assets/images/logo.png",
       "image": "https://archedge.pro/assets/images/og.png",
       "telephone": "+91-91211-88172",
-      "email": "archedge.pro@gmail.com",
+      "email": "archedgepro@gmail.com",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "H. No: 11-13-302, Ground Floor, Road No - 9, Alkapuri Colony",
@@ -349,7 +349,7 @@
                     <i class="fas fa-envelope"></i>
                     <div>
                         <h4>Email</h4>
-                        <p><a href="mailto:archedge.pro@gmail.com">archedge.pro@gmail.com</a></p>
+                        <p><a href="mailto:archedgepro@gmail.com">archedgepro@gmail.com</a></p>
                     </div>
                 </div>
                 
@@ -388,7 +388,7 @@
             <!-- Contact Form -->
             <div class="contact-form fade-in">
                 <h3>Send Us A Message</h3>
-<form id="contactForm" action="https://formsubmit.co/archedge.pro@gmail.com" method="POST" novalidate>
+<form id="contactForm" action="https://formsubmit.co/archedgepro@gmail.com" method="POST" novalidate>
     <div class="form-group">
         <label for="name">Full Name *</label>
         <input type="text" id="name" name="name" required>
@@ -552,8 +552,9 @@ if (!/^[6-9]\d{9}$/.test(phoneValue)) {
 
         <div class="footer-column">
           <h4>Contact Info</h4>
-          <p>Have a project in mind? Let's talk: <a href="mailto:archedge.pro@gmail.com">archedge.pro@gmail.com</a></p>
-          <p><strong>Phone:</strong> <a href="tel:+919121188172">+91 91211 88172</a></p>
+          <p>Have a project in mind? Let's talk: <a href="mailto:archedgepro@gmail.com">archedgepro@gmail.com</a></p>
+          <p><strong>Phone:</strong><br> <a href="tel:+919121188172">+91 91211 88172</a></p>
+        <p><a href="tel:+919063021489">+91 90630 21489</a></p>
         </div>
 
         <div class="footer-column">
