--- a/careers/index.html
+++ b/careers/index.html
@@ -88,7 +88,7 @@
     <meta property="business:contact_data:region" content="Telangana">
     <meta property="business:contact_data:postal_code" content="500035">
     <meta property="business:contact_data:country_name" content="India">
-    <meta property="business:contact_data:email" content="archedge.pro@gmail.com">
+    <meta property="business:contact_data:email" content="archedgepro@gmail.com">
     <meta property="business:contact_data:phone_number" content="+919121188172">
 
     <!-- Google Analytics 4 -->
@@ -120,7 +120,7 @@
         "logo": "https://archedge.pro/assets/images/logo.png",
         "image": "https://archedge.pro/assets/images/og.png",
         "telephone": "+91-91211-88172",
-        "email": "archedge.pro@gmail.com",
+        "email": "archedgepro@gmail.com",
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "H. No: 11-13-302, Ground Floor, Road No - 9, Alkapuri Colony",
@@ -329,7 +329,8 @@
 
     <!-- Hero Section -->
     <section class="hero-section">
-    <img  src="../assets/images/careers.avif"  alt="Archedge careers Hero Banner"  class="hero-img"   fetchpriority="high">
+        <img src="../assets/images/careers.avif" alt="Archedge careers Hero Banner" class="hero-img"
+            fetchpriority="high">
         <div class="hero-content">
             <h1>Join & Grow with Archedge</h1>
             <p style="font-size:large;">Apply for careers or collaborate with us to distribute innovative products.</p>
@@ -341,8 +342,7 @@
         <div class="form-card">
             <h2>Apply for a Job</h2>
 
-            <form id="jobApplicationForm" action="https://formsubmit.co/archedge.pro@gmail.com" method="POST"
-                novalidate>
+            <form id="jobApplicationForm" action="https://formsubmit.co/archedgepro@gmail.com" method="POST" novalidate>
 
                 <!-- Personal Info -->
                 <div class="form-group">
@@ -420,7 +420,7 @@
         <div class="form-card">
             <h2>Collaborate with Us</h2>
 
-            <form id="contactForm" action="https://formsubmit.co/archedge.pro@gmail.com" method="POST" novalidate>
+            <form id="contactForm" action="https://formsubmit.co/archedgepro@gmail.com" method="POST" novalidate>
                 <div class="form-group">
                     <label for="company">Company Name *</label>
                     <input type="text" id="company" name="company" placeholder="Enter your company name" required>
@@ -473,8 +473,10 @@
 
             <div class="footer-column">
                 <h4>Contact Info</h4>
-                <p>Have a project in mind? Let's talk: <a href="mailto:archedge@gmail.com">archedge@gmail.com</a></p>
-                <p><strong>Phone:</strong> <a href="tel:+919121188172">+91 91211 88172</a></p>
+                <p>Have a project in mind? Let's talk: <a href="mailto:archedgepro@gmail.com">archedgepro@gmail.com</a>
+                </p>
+                <p><strong>Phone:</strong><br> <a href="tel:+919121188172">+91 91211 88172</a></p>
+                <p><a href="tel:+919063021489">+91 90630 21489</a></p>
             </div>
 
             <div class="footer-column">
