--- a/products/stanza/index.html
+++ b/products/stanza/index.html
@@ -116,7 +116,7 @@
     "logo": "https://archedge.pro/assets/images/logo.png",
     "image": "https://archedge.pro/assets/images/og.png",
     "telephone": "+91-91211-88172",
-    "email": "archedge.pro@gmail.com",
+    "email": "archedgepro@gmail.com",
     "address": {
       "@type": "PostalAddress",
       "streetAddress": "H. No: 11-13-302, Ground Floor, Road No - 9, Alkapuri Colony",
@@ -450,8 +450,9 @@
       </div>
       <div class="footer-column">
         <h4>Contact Info</h4>
-        <p>Have a project in mind? Let's talk: <a href="mailto:archedge@gmail.com">archedge@gmail.com</a></p>
-        <p><strong>Phone:</strong> <a href="tel:+919121188172">+91 91211 88172</a></p>
+        <p>Have a project in mind? Let's talk: <a href="mailto:archedgepro@gmail.com">archedgepro@gmail.com</a></p>
+        <p><strong>Phone:</strong><br> <a href="tel:+919121188172">+91 91211 88172</a></p>
+        <p><a href="tel:+919063021489">+91 90630 21489</a></p>
       </div>
       <div class="footer-column">
         <h4>Visit Us</h4>
