--- a/careers/index.html
+++ b/careers/index.html
@@ -473,11 +473,11 @@
             <div class="footer-column">
                 <h4>Visit Us</h4>
                 <p>
-                    H. No: 11-13-302, Ground Floor,<br>
-                    Road No - 9, Alkapuri Colony, Kothapet,<br>
-                    Saroornagar Mandal, Hyderabad,<br>
-                    Ranga Reddy Dist. 500035.
-                </p>
+          H.No: 11-13-302, Ground Floor,
+          Road No - 9, Alkapuri Colony, Kothapet,
+          Saroornagar Mandal, Hyderabad,<br>
+          Ranga Reddy Dist. 500035.
+        </p>
             </div>
 
             <div class="footer-column">
