--- a/products/pare/index.html
+++ b/products/pare/index.html
@@ -390,6 +390,21 @@
     <h2>LUXE Collection</h2>
     <!-- Product Grid -->
     <section class="products-grid" id="products">
+
+      <div class="product-category">
+        <div class="product-image">
+          <img src="../../assets/images/brands/pare/Panelo.jpg"
+            alt="Pare India Luxe Panelo decorative wall panels -  interior design panels" loading="lazy">
+        </div>
+        <div class="product-category-content">
+          <h3> Panelo </h3>
+          <p>Ultra-premium panels for interiors and semi-exteriors, blending natural elegance with timeless sophistication.</p>
+          <button class="btn pdfBtn" aria-label="Download PU Stones & Leafs catalog"
+            data-pdf="../../assets/pdfs/ArchEdge-PARÉ LUXE Brochure.pdf">Explore →</button>
+
+        </div>
+      </div>
+
       <!-- Decorative Wall Panels -->
       <div class="product-category">
         <div class="product-image">
@@ -397,14 +412,27 @@
             alt="Pare India Luxe decorative wall panels - Modern dual-texture interior design panels" loading="lazy">
         </div>
         <div class="product-category-content">
-          <h3> Luxe </h3>
-          <p>Bring ultra-dead-matt, real-wood elegance to interiors and semi-exteriors with unmatched authenticity
-            and sophistication.</p>
+          <h3> Verto </h3>
+          <p>Contemporary slatted designs that bring depth, movement, and refined character to interiors and semi-exteriors.</p>
           <button class="btn pdfBtn" aria-label="Download PU Stones & Leafs catalog"
             data-pdf="../../assets/pdfs/ArchEdge-PARÉ LUXE Brochure.pdf">Explore →</button>
 
         </div>
       </div>
+      <div class="product-category">
+        <div class="product-image">
+          <img src="../../assets/images/brands/pare/Flut.png"
+            alt="Pare India Luxe Flue decorative wall panels - Modern  interior design panels" loading="lazy">
+        </div>
+        <div class="product-category-content">
+          <h3> Flut </h3>
+          <p>Sleek linear panels for interiors and semi-exteriors, bringing clean, structured sophistication to walls and ceilings.</p>
+          <button class="btn pdfBtn" aria-label="Download PU Stones & Leafs catalog"
+            data-pdf="../../assets/pdfs/ArchEdge-PARÉ LUXE Brochure.pdf">Explore →</button>
+
+        </div>
+      </div>
+      
     </section>
 
 
@@ -724,8 +752,8 @@
       <div class="footer-column">
         <h4>Visit Us</h4>
         <p>
-          H. No: 11-13-302, Ground Floor,<br>
-          Road No - 9, Alkapuri Colony, Kothapet,<br>
+          H.No: 11-13-302, Ground Floor,
+          Road No - 9, Alkapuri Colony, Kothapet,
           Saroornagar Mandal, Hyderabad,<br>
           Ranga Reddy Dist. 500035.
         </p>
