--- a/products/stardec/index.html
+++ b/products/stardec/index.html
@@ -493,8 +493,8 @@
       <div class="footer-column">
         <h4>Visit Us</h4>
         <p>
-          H. No: 11-13-302, Ground Floor,<br>
-          Road No - 9, Alkapuri Colony, Kothapet,<br>
+          H.No: 11-13-302, Ground Floor,
+          Road No - 9, Alkapuri Colony, Kothapet,
           Saroornagar Mandal, Hyderabad,<br>
           Ranga Reddy Dist. 500035.
         </p>
