--- a/contact/index.html
+++ b/contact/index.html
@@ -638,7 +638,7 @@
                 .then(res => res.text())
                 .then(response => {
                     // Redirect to Thank You page after successful submission
-                    window.location.href = "thankyou.html";
+                    window.location.href = "/contact/thankyou";
                 })
                 .catch(err => {
                     console.error("Error:", err);
